--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".activities.HomeActivity">
 
         </activity>
+        <activity android:name=".activities.LostFindActivity" />
     </application>
 
 </manifest>
