--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 
     <application
@@ -29,6 +30,10 @@
 
         </activity>
         <activity android:name=".activities.LostFindActivity" />
+        <activity android:name=".activities.SetUp1Activity" />
+        <activity android:name=".activities.SetUp2Activity" />
+        <activity android:name=".activities.SetUp3Activity" />
+        <activity android:name=".activities.SetUp4Activity" />
     </application>
 
 </manifest>
