--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
 
     <application
@@ -34,6 +35,7 @@
         <activity android:name=".activities.SetUp2Activity" />
         <activity android:name=".activities.SetUp3Activity" />
         <activity android:name=".activities.SetUp4Activity" />
+        <activity android:name=".activities.FriendsActivity" />
     </application>
 
 </manifest>
