--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
 
     <application
@@ -36,6 +39,11 @@
         <activity android:name=".activities.SetUp3Activity" />
         <activity android:name=".activities.SetUp4Activity" />
         <activity android:name=".activities.FriendsActivity" />
+
+        <service android:name=".service.LostFindService" />
+
+
     </application>
+
 
 </manifest>
