--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity android:name=".activities.SetUp3Activity" />
         <activity android:name=".activities.SetUp4Activity" />
         <activity android:name=".activities.FriendsActivity" />
+        <activity android:name=".activities.SettingCenterActivity" />
 
         <service android:name=".service.LostFindService" />
         <service android:name=".service.LocationService" />
