--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,10 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
-
-
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
 
 
     <application
@@ -48,12 +50,13 @@
         <activity android:name=".activities.SettingCenterActivity" />
         <activity android:name=".activities.TelSmsSafeActivity" />
         <activity android:name=".activities.TelSmsSafeActivityPage" />
-        <activity android:name=".activities.BaseFriendsCallSmsActivity" />
+
         <activity android:name=".activities.ReadSmsFriendsActivity" />
         <activity android:name=".activities.ReadTelFriendsActivity" />
 
         <service android:name=".service.LostFindService" />
         <service android:name=".service.LocationService" />
+        <service android:name=".service.TelSmsBlackService" />
 
 
         <receiver android:name=".receiver.BootReceiver">
@@ -74,8 +77,9 @@
                 <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
             </intent-filter>
         </receiver>
-    </application>
 
+
+    </application>
 
 
 </manifest>
