--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     compile files('libs/ShareSDK-Wechat-Favorite-3.1.0.jar')
     compile files('libs/ShareSDK-Wechat-Moments-3.1.0.jar')
     compile files('libs/RootTools.jar')
+    compile files('libs/android-support-v4.jar')
 }
