--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,6 +111,7 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name=".activities.TaskManagerActivity" />
         <activity android:name=".activities.TaskManagerSettingActivity" />
+        <activity android:name=".activities.LockActivity" />
 
 
         <service android:name=".service.LostFindService" />
@@ -147,7 +148,7 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/example_appwidget_info" />
         </receiver>
-        <receiver android:name=".receiver.ClearTaskReceiver" >
+        <receiver android:name=".receiver.ClearTaskReceiver">
             <intent-filter>
                 <action android:name="com.soleil.widget.cleartask"></action>
             </intent-filter>
