完成程序锁功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,6 +120,7 @@
         <service android:name=".service.ComingPhoneService" />
         <service android:name=".service.ClearTaskService" />
         <service android:name=".service.AppWidgetService" />
+        <service android:name=".service.WatchDogService" />
 
 
         <receiver android:name=".receiver.BootReceiver">
