--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -113,6 +113,7 @@
         <activity android:name=".activities.TaskManagerSettingActivity" />
         <activity android:name=".activities.LockActivity" />
         <activity android:name=".activities.WatchDogEnterPassActivity"  android:launchMode="singleInstance" />
+        <activity android:name=".activities.FlowActivity" />
 
 
         <service android:name=".service.LostFindService" />
