--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
+    <uses-permission android:name="android.permission.GET_PACKAGE_SIZE" />
+    <uses-permission android:name="android.permission.CLEAR_APP_CACHE" />
 
     <application
         android:allowBackup="true"
@@ -112,8 +114,12 @@
         <activity android:name=".activities.TaskManagerActivity" />
         <activity android:name=".activities.TaskManagerSettingActivity" />
         <activity android:name=".activities.LockActivity" />
-        <activity android:name=".activities.WatchDogEnterPassActivity"  android:launchMode="singleInstance" />
+        <activity
+            android:name=".activities.WatchDogEnterPassActivity"
+            android:launchMode="singleInstance" />
         <activity android:name=".activities.FlowActivity" />
+        <activity android:name=".activities.AntiVirusActivity" />
+        <activity android:name=".activities.CacheActivity" />
 
 
         <service android:name=".service.LostFindService" />
